--- a/src/TODO.txt
+++ b/src/TODO.txt
@@ -1,5 +1,8 @@
 Still to do:
 
+Known bugs:
+* Runtime error if the name of the contract referred to in the specification file is not found in the Solidity source.
+
   *** Solidity.hs
   *
   * 
