updated procurement smart contract name

--- a/use-cases/tutorial/main.tex
+++ b/use-cases/tutorial/main.tex
@@ -178,7 +178,7 @@ monitor CourierService{
   
    \subsection{Enforcing a Real-World Procurement Contract}
    
-       \texttt{<name>:} \verb+ProcurementContract+\\
+       \texttt{<name>:} \verb+Procurement+\\
    
    A use case for blockchains and smart contracts is as the theatre wherein parties to a real-world contract interact. This allows us to enforce some aspects of the real-world contract.
    
