--- a/docs/main.tex
+++ b/docs/main.tex
@@ -47,7 +47,7 @@
 
   In order to specify properties, \contractlarva used \emph{dynamic event automata} (DEA) --- an automaton-based formalism, based on that used in the Larva runtime verification tool for Java\footnote{\url{http://www.cs.um.edu.mt/svrg/Tools/LARVA}}. 
   
-Such specifications monitor for events (the choice of the term \emph{event} is unfortunately overloaded with the notion of events in Solidity --- in \contractlarva, the use of the term is limited to the notion of event triggers as used in DAEs unless explicitly otherwise noted) over the contract and enable the specification of event traces which are not desirable. The tool allows capturing two types of events: (i) control-flow events corresponding to entry and exit points of functions defined in the smart contract, written \texttt{before(f)} and \texttt{after(f)} to refer to the entry and exit point of function \texttt{f} respectively; and (ii) data-flow events corresponding to changes in values of variables, written as \texttt{v@e} to denote the event when variable \texttt{v} is changed and expression \texttt{e} (which can also refer to the previous value of \texttt{v} as \texttt{LARVA\_previous\_v}) holds e.g. \texttt{winout@(winout < LARVA\_previous\_winout)} identifies points in the execution of the contract when the win-out amount is decreased. 
+Such specifications monitor for events (the choice of the term \emph{event} is unfortunately overloaded with the notion of events in Solidity --- in \contractlarva, the use of the term is limited to the notion of event triggers as used in DEAs unless explicitly otherwise noted) over the contract and enable the specification of event traces which are not desirable. The tool allows capturing two types of events: (i) control-flow events corresponding to entry and exit points of functions defined in the smart contract, written \texttt{before(f)} and \texttt{after(f)} to refer to the entry and exit point of function \texttt{f} respectively; and (ii) data-flow events corresponding to changes in values of variables, written as \texttt{v@e} to denote the event when variable \texttt{v} is changed and expression \texttt{e} (which can also refer to the previous value of \texttt{v} as \texttt{LARVA\_previous\_v}) holds e.g. \texttt{winout@(winout < LARVA\_previous\_winout)} identifies points in the execution of the contract when the win-out amount is decreased. 
 
 At their most basic level, our specifications will be expressed as (deterministic) automata, listening to contract event triggers. States annotated with a cross denote that a violation has occurred. For instance, consider a smart contract which allows for its initiator to open the gambling table (\texttt{openTable}), on which other users may place a wager (\texttt{placeWager}), and then resolve it (\texttt{resolveWager}) any number of times. The table creator may close down a table (\texttt{closeTable}) as long as it has no unresolved wagers. The automaton shown in Fig.~\ref{f:specifications}(a) ensures that a violation is identified if the table is closed when a wager has been placed but not resolved.
 
@@ -151,7 +151,7 @@ The automata used are, however, symbolic automata --- in that they may use and m
       \ldots
     \}
 
-    // DAE properties are written below
+    // DEA properties are written below
     \ldots
   \}
   \end{alltt}\normalsize
@@ -171,7 +171,7 @@ The automata used are, however, symbolic automata --- in that they may use and m
  
  \contractlarva automatically provides functionality to be able to disable and enable the original contract functionality. By default, the functionality of the original smart contract starts off disabled i.e. all calls to functions in the original smart contract are reverted (via a \texttt{require}). However, the functions \texttt{LARVA\_EnableContract()} and \texttt{LARVA\_DisableContract()} can be used to enable and disable it respectively. It is worth noting that even if enabled, the functionality of the original contract is blocked until the original constructor is called.
 
-  It is also important to note that \texttt{LARVA\_DisableContract()} does not stop a function call already in progress. For example, if you just disable the contract upon identifying a violation triggered by an event labelled by \texttt{before(function)}, the call to the function will continue normally. If this is not the desired behaviour, one must ensure to \texttt{revert} execution through the action on the transition or in the \texttt{reparation} function. Also note that if an event causes multiple DAEs to move into a bad state, each one will trigger a call to the reparation call even if \texttt{LARVA\_DisableContract()} is called.
+  It is also important to note that \texttt{LARVA\_DisableContract()} does not stop a function call already in progress. For example, if you just disable the contract upon identifying a violation triggered by an event labelled by \texttt{before(function)}, the call to the function will continue normally. If this is not the desired behaviour, one must ensure to \texttt{revert} execution through the action on the transition or in the \texttt{reparation} function. Also note that if an event causes multiple DEAs to move into a bad state, each one will trigger a call to the reparation call even if \texttt{LARVA\_DisableContract()} is called.
   
   An important aspect of the \contractlarva instrumentation is how it deals with the contract initialisation. Consider that using the \texttt{LARVA\_EnableContract()} and \texttt{LARVA\_DisableContract()} one may want to introduce another layer of logic before the original contract is enabled, e.g. the payment of some ether for insurance purposes as further discussed in \ref{s:example}. This means that one may not wish for the contract to be initialised upon deployment. \contractlarva deals with this in the following manner in the given cases: (i) if both the initialisation and declarations block do not call the \texttt{LARVA\_EnableContract()} then the contract starts as enabled, with the original constructor if any; (ii) if only the initialisation block contains enabling logic then this code is prepended to the original constructor, if any; while (iii) if the declarations block also contains such logic the original constructor, if any, is transformed into a normal function (with the name <contract-name>Constructor) that must be called to enable the original contract. The third case is more expensive than the others, since it requires the original constructor code to be saved to the blockchain, while in the other cases the required initialisation code is simply part of the constructor (which executed during deployment but not deployed).
 
@@ -256,9 +256,9 @@ The automata used are, however, symbolic automata --- in that they may use and m
   \section{Tool Usage}
   The tool can be compiled using any recent version (version 8.2.1 at the time of writing) of the Glorious Glasgow Haskell Compilation System\footnote{GHC is available from \url{https://www.haskell.org/ghc}. To compile \contractlarva, just execute at the command line: \texttt{ghc -o contractlarva Main}.} (GHC). The tool can then be invoked at the command line as:
   
-  \smallskip\centerline{\texttt{contractlarva \keyword{DAE file} \keyword{input Solidity file} \keyword{output Solidity file}}}
+  \smallskip\centerline{\texttt{contractlarva \keyword{DEA file} \keyword{input Solidity file} \keyword{output Solidity file}}}
   
-  \smallskip The output file created will have the same functionality as the input one, but augmented as specified in the DAE file.
+  \smallskip The output file created will have the same functionality as the input one, but augmented as specified in the DEA file.
   
   \section{Missing Features}
   \label{s:extensions}
@@ -266,12 +266,12 @@ The automata used are, however, symbolic automata --- in that they may use and m
   
   \begin{description}
     \item[Monitorable triggers:] Currently, \contractlarva only supports triggers on (named) function calls and variable value updates. Smart contracts provide various other points-of-interest one can (and perhaps should) hook onto, including asset transfers (e.g. via \texttt{send} or \texttt{transfer}), other non-user defined functions (e.g. \texttt{selfdestruct}), fallback function invocations, reverted transactions, etc. The plan is to add the capability to observe these (and other) triggers in future versions of \contractlarva.   
-    \item[Variable assignment triggers:] Events firing on variable assignments are currently limited to global variables, and cannot be arrays, array elements, structures or structure fields. Furthermore, the variable name may not be reused as a local variable or a function parameter name (since assignments to these would also be wrongly changed). Finally note that initialisation of that variable (as part of its declaration) does not trigger DAE transitions.
+    \item[Variable assignment triggers:] Events firing on variable assignments are currently limited to global variables, and cannot be arrays, array elements, structures or structure fields. Furthermore, the variable name may not be reused as a local variable or a function parameter name (since assignments to these would also be wrongly changed). Finally note that initialisation of that variable (as part of its declaration) does not trigger DEA transitions.
     \item[Function return value:] \contractlarva currently provides no means of referring to function return values in guards and actions in an \texttt{after(function)} event.
     \item[Structured reparation control:] Further options to control how reparation happens (e.g. whether the global reparation code is executed once or upon every violation, whether execution continues, etc.), and a library of reparation schemata to avoid having to program them from scratch are to be added to the tool. 
     \item[Initialisation parameters:] The initialisation code (which is effectively the body of the constructor of the new contract created) is currently restricted to be a parameterless public function.
-    \item[Specifications across contracts:] \contractlarva currently can only specify properties over a single contract. DAEs spanning over events across different contracts are currently not supported. 
-    \item[Parametrised properties:] The current version of the tool does not support parametrised properties i.e. DAEs quantified over different slices of the contract behaviour e.g. one cannot have a property which is instantiated per user address. 
+    \item[Specifications across contracts:] \contractlarva currently can only specify properties over a single contract. DEAs spanning over events across different contracts are currently not supported. 
+    \item[Parametrised properties:] The current version of the tool does not support parametrised properties i.e. DEAs quantified over different slices of the contract behaviour e.g. one cannot have a property which is instantiated per user address. 
   \end{description}
   
   \section{Version History}
